# Shuttle

./: .gitignore  Cargo.toml  build.rs  devenv.nix
protocols/: river-window-management-v1.xml  river-xkb-bindings-v1.xml
src/: config.rs  handlers.rs  input.rs  key_repeat.rs  layout.rs  log.rs  main.rs  protocol.rs  state.rs
src/core/: action.rs  handlers.rs  input.rs  mod.rs
src/layout/: clip.rs  engine.rs  mod.rs
src/state/: app.rs  mod.rs  tree.rs  window.rs
