[package]
name = "shuttle"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-scanner = "0.31"
wayland-protocols = { version = "0.31", features = ["client"] }
wayland-backend = { version = "0.3", features = ["client_system"] }

calloop = "0.13"
calloop-wayland-source = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

xkbcommon = { version = "0.7", features = ["wayland"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bitflags = "2.4"
